<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:baselineAligned="false">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_relative1"
            android:hint="@string/relative"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_adjective1"
            android:hint="@string/adjective"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edit_adjective2"
            android:hint="@string/adjective"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/edit_name_person"
            android:hint="@string/name_person"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_adjective3"
            android:hint="@string/adjective"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_verb_ed"
            android:hint="@string/verb_ed"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_body"
            android:hint="@string/body"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_verb_ing"
            android:hint="@string/verb_ing"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_relative2"
            android:hint="@string/relative"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name"
            android:hint="@string/name"
            android:layout_weight="1" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:enabled="false" />
    </TableRow>
</TableLayout>
